june 2023 projects update 1/2

--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -2,12 +2,12 @@
 <html lang="FR">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Bonjour, je m'appelle Guillaume Robert, je suis développeur web junior en reconversion et je fais du HTML, CSS, Javascript, Node.js et React. "
     />
     <script
       src="https://kit.fontawesome.com/93bd3408a3.js"
